# devtools-arch4edu-extra

./: CMakeLists.txt  PKGBUILD
config/: CMakeLists.txt
config/makepkg/: CMakeLists.txt
config/pacman/: CMakeLists.txt
